fix: increase contrast of check in Comnpleted grid cells

--- a/platform/dashboard/src/renderer/src/components/Grid/Cell.scss
+++ b/platform/dashboard/src/renderer/src/components/Grid/Cell.scss
@@ -2,7 +2,7 @@
 @import "../colors";
 
 $size: 1rem;
-$label-size: 0.5625rem;
+$label-size: 0.5rem;
 
 @keyframes spin {
   from {
