--- a/platform/dashboard/src/renderer/src/pages/Dashboard.scss
+++ b/platform/dashboard/src/renderer/src/pages/Dashboard.scss
@@ -48,6 +48,10 @@ a {
   color: var(--pf-v5-global--info-color--100);
 }
 
+.codeflare--status-completed {
+  color: var(--pf-v5-global--success-color--200);
+}
+
 .codeflare--status-online {
   color: var(--pf-v5-global--success-color--100);
 }
